fix alignment

--- a/webcompat/static/css/development/page/pattern-portfolio.css
+++ b/webcompat/static/css/development/page/pattern-portfolio.css
@@ -4,7 +4,7 @@
   margin:2em 0;
   border:solid 1px transparent;
 }
-h2 {
+.portfolio__title {
   border-bottom: 1px solid #EEE;
 }
 code {
@@ -24,4 +24,7 @@ code {
   height:40px;
   vertical-align:middle;
   margin:0 0 20px 0;
+}
+.wc-inlineBlock {
+  display:inline-block;
 }
